fixed horizontal scrolling problem

--- a/src/styles.css
+++ b/src/styles.css
@@ -24,12 +24,7 @@ h6 {
   background: #f9f9fe;
   padding: 160px 20px;
 }
-.hero h1 {
-  font-family: var(--heading-font-family);
-  font-weight: normal;
-  font-size: 96px;
-  line-height: 2;
-}
+
 .hero h2 {
   font-family: var(--heading-font-family);
   font-weight: normal;
@@ -143,9 +138,9 @@ p {
   max-width: 100%;
   height: auto;
 }
-@media (max-width: 576px) {
+@media (max-width: 900px) {
   h1 {
-    font-size: 48px;
+    font-size: 40px;
     line-height: 2;
   }
 
